<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question" />

    <RadioGroup
        android:id="@+id/rgFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbRice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rice" />

        <RadioButton
            android:id="@+id/rbChapati"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chapati" />

        <RadioButton
            android:id="@+id/rbDosa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dosa" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/cbCheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheese" />

    <CheckBox
        android:id="@+id/cbSalad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salad" />

    <CheckBox
        android:id="@+id/cbOnion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onion" />

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_order" />

    <TextView
        android:id="@+id/tvOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="You Ordered: " />
</LinearLayout>